Migrate WindowService to BrowserService and remove singleton instance
The browser service is solely responsible for supporting navigation and
opening URL's in the default browser of the desktop.